--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -253,7 +253,7 @@
         android:layout_width="145dp"
         android:layout_height="60dp"
         android:text="Register Now"
-        app:backgroundTint="#009688"
+        app:backgroundTint="#139748"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.853"
@@ -266,7 +266,7 @@
         android:layout_width="145dp"
         android:layout_height="60dp"
         android:text="GoTo Login"
-        app:backgroundTint="#9C27B0"
+        app:backgroundTint="#9B2FAE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.111"
