--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -253,7 +253,7 @@
         android:layout_width="145dp"
         android:layout_height="60dp"
         android:text="Register Now"
-        app:backgroundTint="#14AE51"
+        app:backgroundTint="#1A8846"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.853"
