--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -313,5 +313,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.462" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="14dp"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="@+id/branch_spinner"
+        app:layout_constraintTop_toTopOf="@+id/branch_spinner" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
