--- a/app/src/main/res/layout/activity_book_slot.xml
+++ b/app/src/main/res/layout/activity_book_slot.xml
@@ -10,45 +10,30 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
         android:layout_marginTop="107dp"
         android:text="Enter Project Name:"
         android:textColor="@color/black"
+        android:textSize="15dp"
         app:layout_constraintEnd_toStartOf="@+id/projectName"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/date"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/projectName"
-        android:layout_width="174dp"
-        android:layout_height="0dp"
+        android:layout_width="185dp"
+        android:layout_height="35dp"
         android:layout_marginStart="36dp"
         android:layout_marginLeft="36dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="100dp"
         android:layout_marginBottom="37dp"
-        android:textColor="@color/black"
+        android:background="#DCF1FB"
         android:ems="10"
         android:inputType="textPersonName"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/editTextDate"
         app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="233dp"
-        android:layout_marginRight="233dp"
-        android:text="Select date: "
-        android:textColor="#000000"
-        app:layout_constraintEnd_toStartOf="@+id/date"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btn_ReqSlot"
@@ -64,27 +49,33 @@
     <Button
         android:id="@+id/date"
         style="?android:spinnerStyle"
-        android:layout_width="169dp"
-        android:layout_height="55dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginRight="36dp"
-        android:text="__/__/____"
+        android:layout_width="337dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="57dp"
+        android:shadowColor="#9C27B0"
+        android:text="Select date                      :"
         android:textColor="@color/black"
-        android:textSize="30sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editTextDate"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:textSize="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.396"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/projectName"
+        app:strokeColor="#9C27B0" />
 
     <EditText
         android:id="@+id/editTextDate"
         android:layout_width="92dp"
         android:layout_height="0dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginLeft="120dp"
-        android:layout_marginBottom="519dp"
+        android:layout_marginEnd="112dp"
+        android:layout_marginRight="112dp"
+        android:layout_marginBottom="165dp"
         android:ems="10"
         android:inputType="date"
+        android:textColor="#000000"
+        android:textSize="16dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/projectName" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_ReqSlot"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/date" />
 </androidx.constraintlayout.widget.ConstraintLayout>
