--- a/app/src/main/res/layout/activity_book_slot.xml
+++ b/app/src/main/res/layout/activity_book_slot.xml
@@ -10,31 +10,31 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="110dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:text="Enter Project Name:"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="18dp"
         app:layout_constraintEnd_toStartOf="@+id/projectName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/projectName"
-        android:layout_width="185dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginLeft="36dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="40dp"
+        android:layout_width="193dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="104dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:background="#DCF1FB"
         android:ems="10"
         android:inputType="textPersonName"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.026" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_ReqSlot"
@@ -45,44 +45,55 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/projectName" />
+        app:layout_constraintTop_toBottomOf="@+id/projectName"
+        app:layout_constraintVertical_bias="0.58" />
 
     <EditText
         android:id="@+id/editTextDate"
-        android:layout_width="156dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="512dp"
+        android:layout_width="120dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="52dp"
         android:ems="10"
-        android:inputType="date"
+        android:enabled="false"
+        android:inputType="none"
         android:textColor="#000000"
-        android:textSize="16dp"
+
+        android:textColorHint="#4DB6AC"
+        android:textSize="20dp"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/projectName"
-        tools:layout_editor_absoluteX="171dp" />
+        app:layout_constraintStart_toStartOf="@+id/projectName"
+        app:layout_constraintTop_toBottomOf="@+id/projectName" />
 
     <Button
         android:id="@+id/date"
         style="?android:spinnerStyle"
-        android:layout_width="63dp"
-        android:layout_height="46dp"
-        android:layout_marginStart="180dp"
-        android:layout_marginLeft="180dp"
+        android:layout_width="37dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="196dp"
+        android:layout_marginLeft="196dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
         android:shadowColor="#9C27B0"
         android:textColor="@color/black"
+        android:textColorHint="#03A9F4"
         android:textSize="15dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editTextDate"
+        app:backgroundTint="#000000"
+        app:iconTint="#3F51B5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView8"
+        app:layout_constraintTop_toBottomOf="@+id/projectName"
         app:strokeColor="#9C27B0" />
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="115dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="56dp"
-        android:text="Slot Date :"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="114dp"
+        android:layout_height="27dp"
+        android:layout_marginTop="68dp"
+        android:text="Select Date :"
+        android:textColor="#000000"
+        android:textSize="18dp"
+        app:layout_constraintStart_toStartOf="@+id/textView7"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 </androidx.constraintlayout.widget.ConstraintLayout>
