--- a/app/src/main/res/layout/activity_mark_slot.xml
+++ b/app/src/main/res/layout/activity_mark_slot.xml
@@ -8,23 +8,86 @@
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="92dp"
-        android:layout_marginLeft="92dp"
-        android:layout_marginTop="120dp"
+        android:layout_width="279dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="111dp"
         android:text="TextView"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.431"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="38dp"
+        android:layout_width="329dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="18dp"
         android:text="TextView"
+        android:textColor="#000000"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/textView9"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="159dp"
+        android:layout_height="159dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="@+id/textView20"
+        app:layout_constraintTop_toBottomOf="@+id/textView20">
+
+        <RadioButton
+            android:id="@+id/slot1"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:text="8:00am - 10:00am" />
+
+        <RadioButton
+            android:id="@+id/slot2"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:text="10:00am -12:00pm" />
+
+        <RadioButton
+            android:id="@+id/slot3"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:text="1:00pm - 3:00pm" />
+
+        <RadioButton
+            android:id="@+id/slot4"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:text="3:00am - 5:00pm" />
+
+        <RadioButton
+            android:id="@+id/slot5"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="Can not Evaluate on this date" />
+    </RadioGroup>
+
+    <TextView
+        android:id="@+id/textView20"
+        android:layout_width="195dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="18dp"
+        android:text="Select your time below:-"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/textView14"
+        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+
+    <Button
+        android:id="@+id/btnMarkSlot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="73dp"
+        android:text="Mark Slot"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
