--- a/app/src/main/res/layout/activity_teacher.xml
+++ b/app/src/main/res/layout/activity_teacher.xml
@@ -21,10 +21,12 @@
         android:id="@+id/btnMsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="209dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="220dp"
         android:text="Message"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.231"
+        app:layout_constraintEnd_toStartOf="@+id/button4"
+        app:layout_constraintHorizontal_bias="0.12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,11 +34,11 @@
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginTop="57dp"
+        android:layout_marginTop="141dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginRight="48dp"
         android:text="Notification"
-        app:layout_constraintStart_toEndOf="@+id/btnMsg"
-        app:layout_constraintTop_toBottomOf="@+id/btnMsg" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnlogout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
