--- a/app/src/main/res/layout/activity_mark_slot.xml
+++ b/app/src/main/res/layout/activity_mark_slot.xml
@@ -42,31 +42,36 @@
             android:id="@+id/slot1"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:text="8:00am - 10:00am" />
+            android:text="8:00am - 10:00am"
+            android:onClick="checkButton"/>
 
         <RadioButton
             android:id="@+id/slot2"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:text="10:00am -12:00pm" />
+            android:text="10:00am -12:00pm"
+            android:onClick="checkButton"/>
 
         <RadioButton
             android:id="@+id/slot3"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:text="1:00pm - 3:00pm" />
+            android:text="1:00pm - 3:00pm"
+            android:onClick="checkButton"/>
 
         <RadioButton
             android:id="@+id/slot4"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:text="3:00am - 5:00pm" />
+            android:text="3:00am - 5:00pm"
+            android:onClick="checkButton"/>
 
         <RadioButton
             android:id="@+id/slot5"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:text="Can not Evaluate on this date" />
+            android:text="Can not Evaluate on this date"
+            android:onClick="checkButton"/>
     </RadioGroup>
 
     <TextView
