--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -25,6 +25,8 @@
         android:layout_marginLeft="40dp"
         android:layout_marginTop="41dp"
         android:text="TextView"
+        android:textColor="#000000"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -46,7 +48,7 @@
         android:id="@+id/btn_BookSlot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="116dp"
+        android:layout_marginTop="120dp"
         android:layout_marginEnd="70dp"
         android:layout_marginRight="70dp"
         android:text="Book Slot"
